# vlc-vr

./: CMakeLists.txt  README.md  vlc-vr.cpp
cmake/: shaders.cmake
shaders/: CMakeLists.txt  cylinder_distort_vert.glsl  dome_distort_vert.glsl  fxaa_frag.glsl  fxaa_vert.glsl
